--- a/SwipeCardEntryLibrary/build.gradle
+++ b/SwipeCardEntryLibrary/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 15
+    compileSdkVersion 21
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.rethoughtsolutions.swipecardentry"
         minSdkVersion 15
         targetSdkVersion 15
         versionCode 1
@@ -18,8 +17,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
         }
     }
 }
