--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -24,5 +24,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':SwipeCardEntryLibrary')
 }
